dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  namespace: argocd-example
  labels:
    app: laravel-app
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
      - name: laravel-app
        image: cyrip/laravel-octane:latest
        ports:
        - containerPort: 8000
