dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app-service
  namespace: argocd-example
  labels:
    app: laravel-app
spec:
  selector:
    app: laravel-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
